@@ -108,15 +108,16 @@ a brief description beside it.
 			self.entry_portage_snapshot_uri.set_sensitive(False)
 			self.browse_uri.set_sensitive(False)
 		else:
-			self.active_selection = self.controller.install_profile.get_portage_tree_sync_type() or "sync"
-			self.radio_syncs[self.active_selection].set_active(True)
-			self.entry_portage_snapshot_uri.set_text(self.controller.install_profile.get_portage_tree_snapshot_uri())
-			if not self.entry_portage_snapshot_uri.get_text():
-				self.entry_portage_snapshot_uri.set_text(GLIUtility.get_cd_snapshot_uri())
 			for radio in self.radio_syncs:
 				self.radio_syncs[radio].set_sensitive(True)
 			self.entry_portage_snapshot_uri.set_sensitive(True)
 			self.browse_uri.set_sensitive(True)
+			self.active_selection = self.controller.install_profile.get_portage_tree_sync_type() or "sync"
+			self.radio_syncs[self.active_selection].set_active(True)
+			self.stage_selected(self.radio_syncs[self.active_selection], self.active_selection)
+			self.entry_portage_snapshot_uri.set_text(self.controller.install_profile.get_portage_tree_snapshot_uri())
+			if not self.entry_portage_snapshot_uri.get_text():
+				self.entry_portage_snapshot_uri.set_text(GLIUtility.get_cd_snapshot_uri())
 
 	def deactivate(self):
 		if self.active_selection == "snapshot":
