@@ -1,15 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.406 2005/10/05 19:38:20 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.407 2005/10/08 03:21:07 agaffney Exp $
 
 *GLI-0.3 (5 Oct 2005)
+
+*GLI-0.2 (5 Oct 2005)
 
   5 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
   raise exception if password prompt received twice
-
-*GLI-0.2 (3 Oct 2005)
 
   2 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
