@@ -1,8 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.173 2005/10/05 20:13:16 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.174 2005/10/08 03:21:07 agaffney Exp $
 
-*GLI-gtkfe-0.2 (13 Aug 2005)
+*GLI-gtkfe-0.2 (7 Aug 2005)
+
+  7 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
+  stage tarball URI entry is disabled when entering the screen if not snapshot
+
+*GLI-gtkfe-0.2 (5 Aug 2005)
 
   5 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   fix all calls to get_active_text() in URIBrowser.py
